--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -28,7 +28,7 @@
               <li class="li"><a href="#" class="a">Argentina</a></li>
               <li class="li"><a href="#" class="a">Bodegas</a></li>
               <li class="li"><a href="#" class="a">Vinos Finos</a></li>
-              <li class="li"><a href="#" class="a">Galeria</a></li>
+              <li class="li"><a href="#carrousel" class="a">Galeria</a></li>
           </ul>
       </nav>
  </header>
@@ -40,18 +40,18 @@
  <div class="cuadrado">
     <section class="nota1">
         <a href="https://sommeliers.com.ar/cursos/buenos_aires" target="_blank">
-            <img class= "sommellier" src="/imagenes/foto-somm.jpg" alt="Sommelliers en Argentina">
+            <img class= "sommellier" src="./imagenes/foto-somm.jpg" alt="Sommelliers en Argentina">
        </a>
            
     </section>
     <section class="nota2">
         <a href="https://aprende.com/blog/gastronomia/vinos/tipos-de-copas-de-vino/" target="_blank">
-        <img class="copa" src="/imagenes/vino-blanco.jpg" alt="Copas">
+        <img class="copa" src="./imagenes/vino-blanco.jpg" alt="Copas">
     </a>
     </section>
     <section class="nota3">
         <a href="https://turismodevino.com/saber-de-vino/tipos-de-uva-en-el-vino/" target="_blank">
-            <img class="copa1" src="/imagenes/uvas.jpg" alt="Uvas">
+            <img class="copa1" src="./imagenes/uvas.jpg" alt="Uvas">
         </a>
     </section>  
  </div>
@@ -96,14 +96,14 @@
         </span>
     </a>
  </div>
- <div class="carrousel">
+ <div class="carrousel" id="carrousel">
 
     <div class="grande">
-        <img src="/imagenes/Bianchi.jpg" alt="Bianchi" class="img">
-        <img src="/imagenes/altasur.jpg" alt="Altosur" class="img">
-        <img src="/imagenes/helechos.jpeg" alt="Pacheco Pereda" class="img">
-        <img src="/imagenes/tito.jpg" alt="Zuccardi" class="img">
-        <img src="/imagenes/Rutini-Malbec.jpg" alt="Rutini" class="img">
+        <img src="./imagenes/Bianchi.jpg" alt="Bianchi" class="img">
+        <img src="./imagenes/altasur.jpg" alt="Altosur" class="img">
+        <img src="./imagenes/helechos.jpeg" alt="Pacheco Pereda" class="img">
+        <img src="./imagenes/tito.jpg" alt="Zuccardi" class="img">
+        <img src="./imagenes/Rutini-Malbec.jpg" alt="Rutini" class="img">
     </div>
 
     <ul class="puntos">
