--- a/Proyecto/index.html
+++ b/Proyecto/index.html
@@ -29,6 +29,7 @@
               <li class="li"><a href="https://familiafernandezrivera.com/blog/tipos-de-vinos-que-existen/" target="_blank" class="a">Tipos de vinos</a></li>
               <li class="li"><a href="#bodegas" class="a">Bodegas</a></li>
               <li class="li"><a href="#vinosfinos" class="a">Vinos Finos</a></li>
+              <li class="li"><a href="#pie" class="a">Contacto</a></li>
           </ul>
       </nav>
  </header>
@@ -165,10 +166,53 @@
         
     </ul>
 </div>
-<!-- JavaScript Bundle with Popper -->
+
+<div class="container mt-3">
+    <div class="row" >
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Ingresa tu mail</label>
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com">
+        </div>
+        <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Dejanos tus comentarios</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+    </div>
+    <div class="form-check mb-2" >
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label" for="flexCheckDefault">
+          Acepto terminos y condiciones.
+        </label>
+    </div>
+
+    <div>
+        <button type="submit" class="btn btn-primary btn-lg">Enviar</button>
+    </div>
+</div>
+
+<footer id="pie">
+    <nav>
+        <ul class="piedepagina">
+            <li class="insta">
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            </li>
+            <li class="insta">
+                <a href="https://es-la.facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+            </li>
+            <li class="insta">
+                <a href="https://twitter.com/?lang=es" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
+            </li>
+            <li class="insta">
+                <a href="mailto:enzopiac90@gmail.com" target="_blank"><i class="fa-regular fa-envelope fa-2x"></i></a>
+            </li>
+        </ul>
+    </nav>
+</footer>
+
+  <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script defer src="menu.js"></script>
-
+<script src="https://kit.fontawesome.com/64d2b8b9d3.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
